@@ -52,6 +52,9 @@ this release
  MiscUtilities.isBinary(Reader reader)
  MiscUtilities.closeQuietly(InputStream in)
  MiscUtilities.closeQuietly(OutputStream out)
+ MiscUtilities.createWhiteSpace(int len, int tabSize)
+ MiscUtilities.getLeadingWhiteSpaceWidth(String str, int tabSize)
+ MiscUtilities.getColorHexString(Color c)
  Chunk.init(Segment seg, TabExpander expander, float x, FontRenderContext fontRenderContext)
  DisplayTokenHandler.init(SyntaxStyle[] styles, FontRenderContext fontRenderContext, TabExpander expander, List<Chunk> out, float wrapMargin)
  DisplayTokenHandler.initChunk(Chunk chunk, Segment seg)
@@ -80,6 +83,7 @@ this release
  GUIUtilities.loadStyles(String family, int size, boolean color)
  GUIUtilities.parseStyle(String str, String family, int size, boolean color)
  GUIUtilities.parseColor(String name, Color defaultColor)
+ GUIUtilities.getColorHexString(Color c)
  BeanShell.runScript(View view, String path, Reader in, boolean ownNamespace, boolean rethrowBshErrors)
  BeanShell.eval(View view, NameSpace namespace, String command, boolean rethrowBshErrors)
  EditAction.getView(Component comp)
